# Applied-Statistical-Analysis-Problem-3

./: .gitignore  README.md  pyproject.toml
Team_Project_doc_data_24/: submit.csv  train+test.csv
notebook/: eda.ipynb  example_preprocess.ipynb  example_train_predict.ipynb
src/: cfg.py  lib.py  model.py  preprocess.py
